<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.Profile">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:progressBackgroundTint="@color/hijau_tua"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/cokelat_tua"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_profile"
        android:layout_width="187dp"
        android:layout_height="173dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/gray">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/profile" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/emailuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Email User" />

    <TextView
        android:id="@+id/username_profile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailuser"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/colon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/username_profile"
        app:layout_constraintTop_toTopOf="@id/username_profile"
        android:layout_marginStart="16dp"
        android:text="@string/titik_dua"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/colon2"
        app:layout_constraintTop_toTopOf="@id/username_profile"
        android:layout_marginStart="16dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/job_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/job"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/username_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_profile" />

    <TextView
        android:id="@+id/colon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/job_profile"
        app:layout_constraintTop_toTopOf="@id/job_profile"
        android:layout_marginStart="16dp"
        android:text="@string/titik_dua"/>

    <TextView
        android:id="@+id/job_petani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/colon3"
        app:layout_constraintTop_toTopOf="@id/job_profile"
        android:layout_marginStart="16dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/address_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/job_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_profile" />

    <TextView
        android:id="@+id/colon4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/address_profile"
        app:layout_constraintTop_toTopOf="@id/address_profile"
        android:layout_marginStart="16dp"
        android:text="@string/titik_dua"/>

    <TextView
        android:id="@+id/address_petani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/colon4"
        app:layout_constraintTop_toTopOf="@id/address_profile"
        android:layout_marginStart="16dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/number_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="No. Hp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/address_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_profile" />

    <TextView
        android:id="@+id/colon5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/number_profile"
        app:layout_constraintTop_toTopOf="@id/number_profile"
        android:layout_marginStart="16dp"
        android:text="@string/titik_dua"/>

    <TextView
        android:id="@+id/number_petani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/colon5"
        app:layout_constraintTop_toTopOf="@id/number_profile"
        android:layout_marginStart="16dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp" />






    <Button
        android:id="@+id/change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="Change Profile" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="36dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:text="Logout" />

</androidx.constraintlayout.widget.ConstraintLayout>