<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="CoffeeGit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/cokelat_tua"
            android:textSize="22dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/img_home1"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="241dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_home"
            app:srcCompat="@drawable/img_home1" />

        <TextView
            android:id="@+id/what_is_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/img_home1"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/what_is_coffeegit_app"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_coffe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toBottomOf="@id/what_is_coffee"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/detail"
            android:textSize="20dp" />
        <View
            android:id="@+id/rectangle"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/description_coffe"
            android:background="@drawable/rectangle" />

        <TextView
            android:id="@+id/type_good_coffe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rectangle"
            android:text="@string/this_is_a_good_type_of_coffee_beans" />

        <HorizontalScrollView
            android:id="@+id/scroll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_good_coffe">

            <LinearLayout
                android:id="@+id/list_coffee_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_home2"
                    android:layout_width="134dp"
                    android:layout_height="104dp"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/img_home2" />

                <ImageView
                    android:id="@+id/img_home3"
                    android:layout_width="134dp"
                    android:layout_height="104dp"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/img_home3" />

                <ImageView
                    android:id="@+id/img_home4"
                    android:layout_width="134dp"
                    android:layout_height="104dp"
                    app:srcCompat="@drawable/img_home4" />

            </LinearLayout>
        </HorizontalScrollView>



        <TextView
            android:id="@+id/tv_defective_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll1"
            android:text="@string/this_is_a_good_type_of_coffee_beans" />

        <HorizontalScrollView
            android:id="@+id/list_coffee_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_defective_coffee">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_home5"
                    android:layout_width="134dp"
                    android:layout_height="104dp"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/img_home5" />

                <ImageView
                    android:id="@+id/img_home6"
                    android:layout_width="134dp"
                    android:layout_height="104dp"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/img_home6" />

                <ImageView
                    android:id="@+id/img_home7"
                    android:layout_width="134dp"
                    android:layout_height="104dp"
                    app:srcCompat="@drawable/img_home7" />

            </LinearLayout>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>